--- a/.ci_support/osx_.yaml
+++ b/.ci_support/osx_.yaml
@@ -1,6 +1,35 @@
 MACOSX_DEPLOYMENT_TARGET:
 - '10.9'
+bzip2:
+- '1'
+c_compiler:
+- toolchain_c
+cxx_compiler:
+- toolchain_cxx
 macos_machine:
 - x86_64-apple-darwin13.4.0
 macos_min_version:
 - '10.9'
+openssl:
+- 1.0.2
+pin_run_as_build:
+  bzip2:
+    max_pin: x
+  openssl:
+    max_pin: x.x.x
+  readline:
+    max_pin: x
+  sqlite:
+    max_pin: x
+  tk:
+    max_pin: x.x
+  zlib:
+    max_pin: x.x
+readline:
+- '7.0'
+sqlite:
+- '3'
+tk:
+- '8.6'
+zlib:
+- '1.2'
