--- a/.ci_support/win_c_compilervs2008cxx_compilervs2008vc9.yaml
+++ b/.ci_support/win_c_compilervs2008cxx_compilervs2008vc9.yaml
@@ -2,6 +2,12 @@ c_compiler:
 - vs2008
 cxx_compiler:
 - vs2008
+pin_run_as_build:
+  vc:
+    max_pin: x
+vc:
+- '9'
 zip_keys:
-- - c_compiler
+- - vc
+  - c_compiler
   - cxx_compiler
