--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,11 +17,10 @@ source:
 
 build:
   number: 0
+  skip: True  # [win and vc!=9]
   no_link:
     - bin/python2.7     # [unix]
     - DLLs/_ctypes.pyd  # [win]
-  track_features:
-    - vc9               # [win]
   script_env:
     - python_branding
 
