Use sqlite to test on CI's

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -86,7 +86,7 @@ requirements:
     - nasm 2.11.06      # [win]
     - bzip2             # [unix]
     - openssl           # [unix]
-    - libsqlite         # [unix]
+    - sqlite         # [unix]
     - tk                # [unix]
     - xz                # [unix]
     - zlib              # [unix]
@@ -112,7 +112,7 @@ outputs:
         - nasm 2.11.06      # [win]
         - bzip2             # [unix]
         - openssl           # [unix]
-        - libsqlite         # [unix]
+        - sqlite         # [unix]
         - tk                # [unix]
         - xz                # [unix]
         - zlib              # [unix]
@@ -123,7 +123,7 @@ outputs:
         - readline          # [unix]
       run:
         - openssl           # [unix]
-        - libsqlite         # [unix]
+        - sqlite         # [unix]
         - tk                # [unix]
         - xz                # [unix]
         - zlib              # [unix]
