--- a/.ci_support/linux_.yaml
+++ b/.ci_support/linux_.yaml
@@ -2,10 +2,14 @@ bzip2:
 - '1'
 c_compiler:
 - toolchain_c
-curl:
-- '7.59'
+channel_sources:
+- conda-forge,defaults
+channel_targets:
+- conda-forge main
 cxx_compiler:
 - toolchain_cxx
+docker_image:
+- condaforge/linux-anvil
 libffi:
 - '3.2'
 ncurses:
@@ -14,8 +18,6 @@ openssl:
 - 1.0.2
 pin_run_as_build:
   bzip2:
-    max_pin: x
-  curl:
     max_pin: x
   libffi:
     max_pin: x.x
