MNT: Re-rendered with conda-smithy 3.1.12 and pinning 2018.09.20

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,11 @@
 version: 2
 
 jobs:
-  build_linux_:
+  build_linux_c_compilergcccxx_compilergxx:
     working_directory: ~/test
     machine: true
     environment:
-      - CONFIG: "linux_"
+      - CONFIG: "linux_c_compilergcccxx_compilergxx"
     steps:
       - checkout
       - run:
@@ -18,9 +18,61 @@ jobs:
       - run:
           # Run, test and (if we have a BINSTAR_TOKEN) upload the distributions.
           command: ./.circleci/run_docker_build.sh
+  build_linux_c_compilertoolchain_ccxx_compilertoolchain_cxx:
+    working_directory: ~/test
+    machine: true
+    environment:
+      - CONFIG: "linux_c_compilertoolchain_ccxx_compilertoolchain_cxx"
+    steps:
+      - checkout
+      - run:
+          name: Fast finish outdated PRs and merge PRs
+          command: |
+            ./.circleci/fast_finish_ci_pr_build.sh
+            ./.circleci/checkout_merge_commit.sh
+      - run:
+          command: docker pull condaforge/linux-anvil
+      - run:
+          # Run, test and (if we have a BINSTAR_TOKEN) upload the distributions.
+          command: ./.circleci/run_docker_build.sh
+  build_osx_c_compilerclangcxx_compilerclangxx:
+    working_directory: ~/test
+    macos:
+      xcode: "9.0"
+    environment:
+      - CONFIG: "osx_c_compilerclangcxx_compilerclangxx"
+    steps:
+      - checkout
+      - run:
+          name: Fast finish outdated PRs and merge PRs
+          command: |
+            ./.circleci/fast_finish_ci_pr_build.sh
+            ./.circleci/checkout_merge_commit.sh
+      - run:
+          # Run, test and (if we have a BINSTAR_TOKEN) upload the distributions.
+          command: ./.circleci/run_osx_build.sh
+  build_osx_c_compilertoolchain_ccxx_compilertoolchain_cxx:
+    working_directory: ~/test
+    macos:
+      xcode: "9.0"
+    environment:
+      - CONFIG: "osx_c_compilertoolchain_ccxx_compilertoolchain_cxx"
+    steps:
+      - checkout
+      - run:
+          name: Fast finish outdated PRs and merge PRs
+          command: |
+            ./.circleci/fast_finish_ci_pr_build.sh
+            ./.circleci/checkout_merge_commit.sh
+      - run:
+          # Run, test and (if we have a BINSTAR_TOKEN) upload the distributions.
+          command: ./.circleci/run_osx_build.sh
 
 workflows:
   version: 2
   build_and_test:
     jobs:
-      - build_linux_
+      - build_linux_c_compilergcccxx_compilergxx
+      - build_linux_c_compilertoolchain_ccxx_compilertoolchain_cxx
+      - build_osx_c_compilerclangcxx_compilerclangxx
+      - build_osx_c_compilertoolchain_ccxx_compilertoolchain_cxx
