--- a/.ci_support/linux_.yaml
+++ b/.ci_support/linux_.yaml
@@ -2,8 +2,16 @@ bzip2:
 - '1'
 c_compiler:
 - toolchain_c
+channel_sources:
+- conda-forge,defaults
+channel_targets:
+- conda-forge main
 cxx_compiler:
 - toolchain_cxx
+docker_image:
+- condaforge/linux-anvil
+libffi:
+- '3.2'
 ncurses:
 - '6.1'
 openssl:
@@ -11,6 +19,8 @@ openssl:
 pin_run_as_build:
   bzip2:
     max_pin: x
+  libffi:
+    max_pin: x.x
   ncurses:
     max_pin: x.x
   openssl:
