MNT: Re-rendered with conda-smithy 3.1.12 and pinning 2018.09.20

--- a/.ci_support/osx_c_compilertoolchain_ccxx_compilertoolchain_cxx.yaml
+++ b/.ci_support/osx_c_compilertoolchain_ccxx_compilertoolchain_cxx.yaml
@@ -1,5 +1,7 @@
 MACOSX_DEPLOYMENT_TARGET:
 - '10.9'
+build_number_decrement:
+- '1000'
 bzip2:
 - '1'
 c_compiler:
@@ -43,5 +45,11 @@ sqlite:
 - '3'
 tk:
 - '8.6'
+zip_keys:
+- - c_compiler
+  - cxx_compiler
+  - channel_sources
+  - channel_targets
+  - build_number_decrement
 zlib:
 - '1.2'
