--- a/.ci_support/linux_c_compilertoolchain_ccxx_compilertoolchain_cxx.yaml
+++ b/.ci_support/linux_c_compilertoolchain_ccxx_compilertoolchain_cxx.yaml
@@ -1,3 +1,5 @@
+build_number_decrement:
+- '1000'
 bzip2:
 - '1'
 c_compiler:
@@ -39,5 +41,12 @@ sqlite:
 - '3'
 tk:
 - '8.6'
+zip_keys:
+- - c_compiler
+  - cxx_compiler
+  - channel_sources
+  - channel_targets
+  - docker_image
+  - build_number_decrement
 zlib:
 - '1.2'
