[skip appveyor] Add binutils to toolchain compiler python under unix

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -95,6 +95,10 @@ requirements:
     - tk                                 # [unix]
     - ncurses                            # [unix]
     - libffi                             # [unix]
+  run:
+    {% if 'toolchain' in compiler('c') %}  # [unix]
+    - binutils                             # [unix]
+    {% endif %}                            # [unix] 
 
 test:
   commands:
