[skip appveyor] remove the patch that makes binutils needed for toolchain built python

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,7 +22,9 @@ source:
       - patches/0011-runtime_library_dir_option-Use-1st-word-of-CC-as-com.patch
       - patches/0012-Win32-Do-not-download-externals.patch
       - patches/0013-Add-support-for-_CONDA_PYTHON_SYSCONFIGDATA_NAME-if-.patch
+      {% if 'toolchain' not in compiler('c') %}
       - patches/0014-Fix-find_library-so-that-it-looks-in-sys.prefix-lib-.patch
+      {% endif %}
       - patches/0015-Disable-new-dtags-in-unixccompiler.py.patch
       # AppVeyor does not have the 10.0.16299 SDK installed, leave as is
       # This is actually something else now
