--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,7 +21,7 @@ source:
       # use another set of patches for the gcc (new compiler) build
       # these are the same patches as used in the AnacondaRecipes feedstock
       - 0001-backport-Python-3.6-_PYTHON_SYSCONFIGDATA_NAME.patch
-      - 0002-Add-Anaconda-Distribution-version-logic.patch
+      #- 0002-Add-Anaconda-Distribution-version-logic.patch
       - 0003-Darwin-Hack-sys.-exec_-prefix-if-run-from-python.app.patch
       - 0004-Darwin-Add-arch-x86_64-to-UnicCCompiler-ld_args.patch
       - 0005-Win32-distutils-Also-look-for-executable.bat.patch
