--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -87,7 +87,7 @@ source:
 
 
 build:
-  number: 1002
+  number: 1003
   # Windows has issues updating python if conda is using files itself.
   # Copy rather than link.
   no_link:
@@ -100,6 +100,9 @@ build:
     - bzip2             # [unix]
   # match python.org compiler standard
   skip: True            # [win and vc != 14]
+  {% if 'toolchain' in compiler('c') %}
+  skip: True  # [osx]
+  {% endif %}
 
 requirements:
   build:
