We don't have run_exports for ncurses yet

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -122,6 +122,9 @@ requirements:
     - tk                                 # [unix]
     - ncurses                            # [unix]
     - libffi                             # [unix]
+  run:
+    - ncurses                            # [unix]
+
 
 test:
   commands:
