enable sqlite3 loadable extension support
Though the discussion in #97 enabled sqlite3 loadable extension support in Python3, it wasn't enabled in Python2.
[The footnote in the manual](https://docs.python.org/2/library/sqlite3.html#f1) explains how to enable it.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -36,6 +36,8 @@ source:
       - 0013-Fix-find_library-so-that-it-looks-in-sys.prefix-lib-.patch
       - 0014-Fix-cross-compilation-on-Debian-based-distros.patch
       {% endif %}
+      # use an additional set of patches for any build
+      - enable-loadable-sqlite-extensions.patch
   - url: https://github.com/python/cpython-source-deps/archive/bzip2-1.0.6.zip      # [win]
     folder: externals/bzip2-1.0.6                                                   # [win]
     sha256: c42fd1432a2667b964a74bc423bb7485059c4a6d5dc92946d59dbf9a6bdb988d        # [win]
@@ -63,7 +65,7 @@ source:
 
 
 build:
-  number: 1005
+  number: 1006
   no_link:
     - bin/python2.7     # [unix]
     - DLLs/_ctypes.pyd  # [win]
